# orionviva

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md
.github/workflows/: dco.yml
bench/: README.md  corpus.example.yaml  models.example.yaml  pyproject.toml
bench/tests/: test_arithmetic.py  test_claims_and_score.py  test_match_and_capture.py  test_normalize.py
bench/vivabench/: __init__.py  capture.py  claims.py  cli.py  config.py  corpus.py  keybuild.py  prompts.py  report.py  runner.py  score.py
bench/vivabench/models/: __init__.py  anthropic_adapter.py  base.py  openai_compat.py
bench/vivabench/verify/: match.py  normalize.py
core/: README.md  pyproject.toml
core/tests/: test_arithmetic.py  test_normalize.py  test_openai_continuation.py
core/vivacore/: __init__.py  errors.py  prompts.py
core/vivacore/models/: __init__.py  anthropic_adapter.py  base.py  openai_compat.py  spec.py
core/vivacore/verify/: __init__.py  arithmetic.py  normalize.py
docs/: README.md  account-identity-and-entity-resolution.md  adoption-and-distribution.md  agent-and-model-landscape.md  agent-toolset.md  benchmark-harness-architecture.md  benchmark-harness-design.md  competitive-landscape.md  data-model-considerations.md  data-model-spike-findings.md  design-invariants.md  discovery-map-and-reversibility.md  discovery-plan.md  discovery-synthesis.md  doc-type-registry-and-format-profiles.md  document-preprocessing.md  domain-model-vs-orchestration.md  eval-harness-design.md  experience-vision.md  extraction-and-confidence.md  form-factor-and-stack.md  format-commons.md  implementation-roadmap.md  individual-as-enterprise.md  knowledge-and-expectations.md  local-first-storage-and-crypto.md  model-trust-policy.md  multi-device-and-remote-access.md  own-chain-vs-borrowed-trust.md  reading-guide.md  threat-model-and-ingestion-security.md  transfer-links-and-cross-document-corroboration.md  v0-scope.md  verification-findings-and-correction.md
docs/decisions/: ADR-001-hybrid-model-strategy.md  ADR-002-mit-license.md  ADR-003-raw-capture-doctrine.md  (+8 more)
product/: README.md  pyproject.toml
product/tests/: test_answer.py  test_crypto.py  test_diagnose.py  test_pipeline.py  test_postings.py  test_projection.py  test_prompt_library.py  test_raw_store.py  test_reader_retry.py  test_reader_two_phase.py  test_registry.py  test_review.py  test_statement.py  test_store.py  test_transfers.py  test_web.py
product/viva/: __init__.py  answer.py  crypto.py  debug_read.py  debug_vault.py  env.py  logs.py  reingest.py  rescan.py  vault.py
product/viva/ingest/: __init__.py  diagnose.py  identity.py  pipeline.py  prompt_library.py  prompts.py  raw_store.py  reader.py  registry.py  review.py  statement.py  transfers.py
product/viva/ledger/: __init__.py  events.py  identity.py  ledger.py  postings.py  projection.py  store.py
product/viva/web/: __init__.py  __main__.py  index.html  sample.py  server.py  service.py
